<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.module_views.MainFragment"
        android:label="@string/main_fragment"
        tools:layout="@layout/fragment_main">

        <action android:id="@+id/action_main_to_slide_delete"
            app:destination="@id/slideDeleteRecyclerViewDemo">
        </action>

        <action android:id="@+id/action_main_to_left_delete"
            app:destination="@id/leftDeleteItemLayout">
        </action>

        <action android:id="@+id/action_main_to_header_footer"
            app:destination="@id/headerFooterViewDemo">
        </action>

        <action android:id="@+id/action_main_to_scroll_select"
            app:destination="@id/scrollSelectViewDemo">
        </action>

        <action android:id="@+id/action_main_to_layer_slide"
            app:destination="@id/twoLayerSlideLayoutDemo">
        </action>

        <action android:id="@+id/action_main_to_scrolling_collapse"
            app:destination="@id/scrollingCollapseTopDemo">
        </action>

        <action android:id="@+id/action_main_to_desktop_layer"
            app:destination="@id/desktopLayerLayoutDemo">
        </action>

        <action android:id="@+id/action_main_to_hexagon_rank"
            app:destination="@id/hexagonRankViewDemo">
        </action>

        <action android:id="@+id/action_main_to_pie_chart"
            app:destination="@id/pieChartViewDemo">
        </action>

        <action android:id="@+id/action_main_to_red_dom"
            app:destination="@id/redDomViewDemo">
        </action>

        <action android:id="@+id/action_main_to_pattern_lock"
            app:destination="@id/patternLockViewDemo">
        </action>

        <action android:id="@+id/action_main_to_particle_lines"
            app:destination="@id/particleLinesBgViewDemo">
        </action>

    </fragment>

    <fragment
        android:id="@+id/slideDeleteRecyclerViewDemo"
        android:name="com.example.module_views.custom.demo.SlideDeleteRecyclerViewDemo"
        android:label="@string/slide_delete_fragment"
        tools:layout="@layout/fragment_slide_delete" />

    <fragment
        android:id="@+id/leftDeleteItemLayout"
        android:name="com.example.module_views.custom.demo.LeftDeleteItemLayoutDemo"
        android:label="@string/left_delete_fragment"
        tools:layout="@layout/fragment_left_delete" />

    <fragment
        android:id="@+id/headerFooterViewDemo"
        android:name="com.example.module_views.custom.demo.HeaderFooterViewDemo"
        android:label="@string/left_delete_fragment"
        tools:layout="@layout/fragment_header_footer" />

    <fragment
        android:id="@+id/scrollSelectViewDemo"
        android:name="com.example.module_views.custom.demo.ScrollSelectViewDemo"
        android:label="@string/scroll_select_fragment"
        tools:layout="@layout/fragment_scroll_select" />

    <fragment
        android:id="@+id/twoLayerSlideLayoutDemo"
        android:name="com.example.module_views.custom.demo.TwoLayerSlideLayoutDemo"
        android:label="@string/layer_slide_fragment"
        tools:layout="@layout/fragment_layer_slide" />

    <fragment
        android:id="@+id/scrollingCollapseTopDemo"
        android:name="com.example.module_views.custom.demo.ScrollingCollapseTopDemo"
        android:label="@string/scrolling_collapse_fragment"
        tools:layout="@layout/fragment_scrolling_collapse" />

    <fragment
        android:id="@+id/desktopLayerLayoutDemo"
        android:name="com.example.module_views.custom.demo.DesktopLayerLayoutDemo"
        android:label="@string/desktop_layer_fragment"
        tools:layout="@layout/fragment_desktop_layer" />

    <fragment
        android:id="@+id/hexagonRankViewDemo"
        android:name="com.example.module_views.custom.demo.HexagonRankViewDemo"
        android:label="@string/hexagon_rank_fragment"
        tools:layout="@layout/fragment_hexagon_rank" />

    <fragment
        android:id="@+id/pieChartViewDemo"
        android:name="com.example.module_views.custom.demo.PieChartViewDemo"
        android:label="@string/pie_chart_fragment"
        tools:layout="@layout/fragment_pie_chart" />

    <fragment
        android:id="@+id/redDomViewDemo"
        android:name="com.example.module_views.custom.demo.RedDomViewDemo"
        android:label="@string/red_dom_fragment"
        tools:layout="@layout/fragment_red_dom" />

    <fragment
        android:id="@+id/patternLockViewDemo"
        android:name="com.example.module_views.custom.demo.PatternLockViewDemo"
        android:label="@string/pattern_lock_fragment"
        tools:layout="@layout/fragment_pattern_lock" />

    <fragment
        android:id="@+id/particleLinesBgViewDemo"
        android:name="com.example.module_views.custom.demo.ParticleLinesBgViewDemo"
        android:label="@string/particle_lines_fragment"
        tools:layout="@layout/fragment_particle_lines" />

</navigation>